name:                ndbl
version:             0.1.0.1
synopsis:            A simple interface to the NDBL config format.
description:         A simplistic interface to a config file format
                     meant to resemble the configuration file of
                     Plan 9's ndb(6) and associated utilities.
license:             BSD3
author:              Getty Ritter
maintainer:          gettylefou@gmail.com
copyright:           (c) 2014 Getty Ritter
category:            Data
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     Data.NDBL
  other-modules:       Data.NDBL.Parse, Data.NDBL.Print
  build-depends:       base >=4.6 && <4.7,
                       attoparsec,
                       text,
                       pretty
  default-language:    Haskell2010
